tests/ast_interpreter/err_number_plus_string.expected
<string>:2:14: error: operator + cannot be applied to Int and String
    print(42 + " is the answer");
             ^
