tests/ast_interpreter/err_number_plus_string.nx
fun main() {
    print(42 + " is the answer");
    return 0;
}